<resources>
    <string name="app_name">Music App Roxy</string>

    <string name="cover">cover</string>

    <string name="box1">Album</string>
    <string name="box2">Artist</string>
    <string name="box3">Genre</string>
    <string name="box4">Playlist</string>

    <string name="img1">cover</string>


    <string name="box31">Previous</string>
    <string name="box32">Play</string>
    <string name="box33">Next</string>


    <string name="home_text">This Activity is your home with a menu bar with intents to different activities</string>
    <string name="album_text">This Activity displays your music sorted in albums in  list view in linearlayout with nested horizontal linearlayout having imageviews to hold images</string>
    <string name="artis_text">This Activity displays your music sorted by artists in list view in linearlayout with nested horizontal linearlayout having imageviews to hold images</string>
    <string name="genre_text">This Activity displays your music sorted by generes in list view in linearlayout with textviews</string>
    <string name="playlist_text">This Activity displays your playlists in listview in linearlayout with nested horiznal linear layout with background colors</string>

</resources>
