<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicapproxy.MainActivity">


    <LinearLayout
        android:id="@+id/strip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include layout="@layout/button_bar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/home_text"
            android:textColor="#ECEFF1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/strip2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/strip3"
        android:layout_below="@+id/strip1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cover"
            android:scaleType="centerCrop"
            android:src="@drawable/cover" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/strip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            style="@style/bottom_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/box31" />

        <TextView
            style="@style/bottom_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/box32" />

        <TextView
            style="@style/bottom_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/box33" />

    </LinearLayout>
</RelativeLayout>